<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#ff000000" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.fogMode" />
			<Spinner android:entries="@array/fog_array" android:id="@id/fogMode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/fog_prompt" />
			<CheckBox android:id="@id/revealedMap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="i:menus.battleroom.gameoptions.startRevealed" />
			<TextView android:id="@id/startingCreditsText" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.startingCredits" />
			<Spinner android:entries="@array/credits_array" android:id="@id/startingCredits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/credits_prompt" />
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.aiDifficulty" />
			<Spinner android:entries="@array/aidifficulty_array" android:id="@id/netgameoptions_aiDifficulty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/aidifficulty_prompt" />
			<CheckBox android:id="@id/doubleIncome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="i:menus.battleroom.gameoptions.doubleIncome" />
			<CheckBox android:id="@id/noNukes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="i:menus.battleroom.gameoptions.noNukes" />
			<LinearLayout android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<Button android:id="@id/applyButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="i:menus.battleroom.gameoptions.apply" />
				<Button android:id="@id/cancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="i:menus.battleroom.gameoptions.cancel" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
